# ros-home

./: .gitignore  LICENSE  TODO  home_ws.code-workspace
src/home_core/: package.xml  setup.cfg  setup.py
src/home_core/home_core/: __init__.py  bt_discover.py  command.py  conditions-example.json  discover.py  event_detect.py  file_configure.py  forecast-example.json  home_monitor.py  net_discover.py  obs-stations-example.json  observe.py  occupancy_track.py  owntracks_read.py  pushover_send.py  scene_execute.py  scene_schedule.py  schedule.py  sms_message.py  sms_send.py  sun_track.py  weather_track.py
src/home_devices/: package.xml  setup.cfg  setup.py
src/home_devices/home_devices/: asyncio_node_example.py  device_launch.py  lutron_device.py  nest_device.py  xbox_device.py  yamaha_device.py
src/home_extras/: package.xml  setup.cfg  setup.py
src/home_extras/home_extras/: stock_track.py
src/home_launch/: package.xml  setup.cfg  setup.py
src/home_launch/home_launch/: core_launch.py  core_nodisco.py  core_plus_lutron.py  home_launch.py  home_no_mon.py  killall.py
src/home_ui/: package.xml  setup.cfg  setup.py
src/home_ui/home_ui/: __init__.py  central_widget.py  central_widget_config.py  diagnostics_frames.py  home_frames.py  home_gui.ui  keyboard_shortcuts.py  people_frames.py  qt_central_frame.py  qt_left_toolbar.py  qt_ui.py  rqt_central_frame.py  rqt_home.py  rqt_home_widgets.py  rqt_style_sheet.py  ui_node.py
