<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>home_launch</name>
  <version>0.0.3</version>
  <description>Home_launch provides home node launch files</description>
  <maintainer email="matthew.grund77@gmail.com">Matthew Grund</maintainer>
  <license>BSD-2-Clause</license>

  <exec_depend>home_core</exec_depend>
  <exec_depend>home_devices</exec_depend>
  <exec_depend>home_extras</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
